# ocom

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
src/ocom/: __init__.py  __main__.py  app.py  config.py
src/ocom/core/: __init__.py  process.py  tool.py
src/ocom/styles/: app.tcss
src/ocom/tools/: __init__.py  goodbyedpi.py  openvpn.py  spoofdpi.py  tailscale.py  warp.py
src/ocom/ui/: __init__.py
src/ocom/ui/screens/: __init__.py  main.py
src/ocom/ui/widgets/: __init__.py  log_panel.py  tool_card.py
tests/: __init__.py  conftest.py  test_base_tool.py  test_cli.py  test_config.py  test_process_manager.py  test_tool_config.py  test_tool_status.py
